# DIESEL

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.github/workflows/: sphinx_docs.yml
diesel/: __init__.py  cluster.py  dask_distance.py  kalman_filtering.py  non_stationary_models.py  scoring.py  utils.py
diesel/assimilation/: distributed_kalman.py  nondistributed_kalman.py
diesel/covariance/: __init__.py  kernels.py
diesel/estimation/: __init__.py  base_estimation.py  bayesian.py
diesel/gridding/: __init__.py  planar_grids.py
diesel/plotting/: __init__.py  covariance_plotting.py
diesel/random_fields/: __init__.py  kernels.py  non_stationary_models.py  samplers.py
diesel/sampling/: __init__.py  samplers.py
diesel/utils/: __init__.py  cluster.py  dask_distance.py  haversine.pyx  matrix.py  utils.py
docs/: Makefile
docs/source/: conf.py  index.rst
examples/: first_example.py  plot_variogram.py  random_fields.ipynb
reporting/approximation_quality/: matrix_norm_vs_ensemble_size.py  matrix_norm_wishart_vs_ensemble.py  matrix_norm_wishart_vs_ensemble_illspec.py  variogram_comparison.py
reporting/paleoclimate/: cornell_Nov_8_diagnose_stations.ipynb  first_test_climate.py  plot_scores_synthetic.ipynb  twentieth_century.ipynb  twentieth_century_n1200.py  (+2 more)
scripts/: download_mpi_ge_temperature_data.sh
tests/: test_InverseWishart.py  test_SvdSampler.py  test_kalman_filter.py  test_non_stationary.py
(+8 files in other folders)
